testcases/pos/batch/function_call_precedence.bard
let fun f(x: Int): Int = x * 2
in
    f(20) + f(1)
end
