testcases/neg/eval/fun_wrong_arg_type.bard
let fun f(x: Int) = x
in
    f(true)
end
